# snacka

./: .dockerignore  .editorconfig  .env.example  .gitignore  ACCOUNT_PLAN.md  AGENTS.md  CAPTURE_PLAN.md  CHANNELS_PLAN.md  CONTROLLER_STREAMING_PLAN.md  DEVELOPMENT.md  DRAWING_PLAN.md  Dockerfile  Miscord.sln  PLAN.md  PORT_FORWARD_PLAN.md  README.md  SECURITY_PLAN.md  TEXT_PLAN.md  THREADS_PLAN.md  VOICE_PLAN.md  dev-alice.sh  dev-backend.sh  dev-bob.sh  dev-capture.sh  dev-clients.sh  dev-start-clean.sh  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  run-client.sh  seed-db.sh
.github/workflows/: build-client.yml  build-server.yml  test-audio-enum.yml
assets/: generate-icons.sh
docs/: CODE_SIGNING.md  DEPLOY.md  NATIVE_CAPTURE_CONTRACT.md
docs/hardware-video/: LINUX_IMPLEMENTATION.md  README.md  WINDOWS_IMPLEMENTATION.md
docs/plans/: rnnoise-integration-plan.md
installers/linux/: AppRun  create-appimage.sh  snacka.desktop
installers/macos/: AppIcon.icns  Info.plist  Snacka  Snacka.entitlements  create-app-bundle.sh  create-dmg.sh
installers/windows/: Snacka.iss  build-installer.ps1
src/Miscord.Client/: App.axaml  App.axaml.cs  Miscord.Client.csproj  Program.cs
src/Miscord.Client/Controls/: AttachmentPreview.cs  AudioDeviceContent.axaml  AudioDeviceContent.axaml.cs  ChannelListView.axaml  ChannelListView.axaml.cs  ChatAreaView.axaml  ChatAreaView.axaml.cs  CommunityListView.axaml  CommunityListView.axaml.cs  DMContentView.axaml  DMContentView.axaml.cs  EmojiPickerContent.axaml  EmojiPickerContent.axaml.cs  GifPickerContent.axaml  GifPickerContent.axaml.cs  GpuVideoView.cs  HardwareVideoView.cs  ImageLightbox.cs  MembersListView.axaml  MembersListView.axaml.cs  NicknameEditOverlay.axaml  NicknameEditOverlay.axaml.cs  PinnedMessagesContent.axaml  PinnedMessagesContent.axaml.cs  QuickSwitcherContent.axaml  QuickSwitcherContent.axaml.cs  ThreadPanelView.axaml  ThreadPanelView.axaml.cs  UserPanelView.axaml  UserPanelView.axaml.cs  VoiceChannelContentView.axaml  VoiceChannelContentView.axaml.cs  VoiceConnectedPanelView.axaml  VoiceConnectedPanelView.axaml.cs
src/Miscord.Client/Converters/: IntEqualsZeroConverter.cs  MentionConverters.cs  PluralizeConverter.cs  SettingsConverters.cs
src/Miscord.Client/Services/: AnnotationService.cs  ApiClient.cs  ApiModels.cs  AudioDeviceService.cs  FfmpegProcessDecoder.cs  FfmpegProcessEncoder.cs  FuzzyMatcher.cs  IApiClient.cs  IScreenCaptureService.cs  ScreenCaptureService.cs  ScreenCaptureSource.cs  ServerConnection.cs  SettingsStore.cs  SignalRService.cs  UserAudioMixer.cs  VideoDeviceService.cs  WebRtcService.cs
src/Miscord.Client/Styles/: ComponentStyles.axaml
src/Miscord.Client/ViewModels/: AccountSettingsViewModel.cs  AdminPanelViewModel.cs  AudioSettingsViewModel.cs  DMContentViewModel.cs  DirectMessagesViewModel.cs  MainAppViewModel.cs  MainWindowViewModel.cs  QuickSwitcherViewModel.cs  ScreenAnnotationViewModel.cs  ScreenSharePickerViewModel.cs  SettingsViewModel.cs  ThreadViewModel.cs  VideoSettingsViewModel.cs  VoiceChannelContentViewModel.cs  VoiceChannelViewModel.cs
src/Miscord.Client/Views/: AccountSettingsView.axaml  AdminPanelView.axaml  AnnotationToolbarWindow.axaml  AnnotationToolbarWindow.axaml.cs  AudioSettingsView.axaml  AudioSettingsView.axaml.cs  MainAppView.axaml  MainAppView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ScreenAnnotationWindow.axaml  ScreenAnnotationWindow.axaml.cs  ScreenSharePickerView.axaml  SettingsView.axaml  SettingsView.axaml.cs  VideoSettingsView.axaml  VideoSettingsView.axaml.cs  VoiceChannelContentView.axaml  VoiceChannelContentView.axaml.cs
src/Miscord.Server/: Miscord.Server.csproj  Miscord.Server.http  Program.cs  appsettings.Production.json  appsettings.json
src/Miscord.Server/Controllers/: AttachmentsController.cs  AuthController.cs  ChannelsController.cs  (+3 more)
src/Miscord.Shared/: Class1.cs
src/Miscord.WebRTC/: Class1.cs  Miscord.WebRTC.csproj
src/MiscordMetalRenderer/: Package.swift
src/Snacka.Client/: App.axaml  App.axaml.cs  Program.cs  Snacka.Client.csproj
src/Snacka.Server/: Program.cs  Snacka.Server.csproj  Snacka.Server.http  appsettings.Production.json  appsettings.json
src/SnackaCapture/: Package.swift
src/SnackaCaptureLinux/: CMakeLists.txt
src/SnackaCaptureLinux/src/: Protocol.h  PulseAudioCapturer.cpp  PulseAudioCapturer.h  PulseMicrophoneCapturer.cpp  PulseMicrophoneCapturer.h  SourceLister.cpp  SourceLister.h  V4L2Capturer.cpp  V4L2Capturer.h  VaapiEncoder.cpp  VaapiEncoder.h  X11Capturer.cpp  X11Capturer.h  main.cpp
src/SnackaCaptureVideoToolbox/: Package.swift
src/SnackaCaptureWindows/: CMakeLists.txt
src/SnackaCaptureWindows/src/: CameraCapturer.cpp  CameraCapturer.h  MediaFoundationEncoder.cpp  MediaFoundationEncoder.h  MicrophoneCapturer.cpp  MicrophoneCapturer.h  Protocol.h  SourceLister.cpp  SourceLister.h  main.cpp
tests/Miscord.Server.Tests/: Miscord.Server.Tests.csproj  Test1.cs
tests/Miscord.WebRTC.Tests/: Miscord.WebRTC.Tests.csproj  Test1.cs
tests/Snacka.Client.Tests/: AudioFormatTests.cs  AudioPipelineRegressionTests.cs  AudioResamplerTests.cs  AutocompleteCaretTests.cs  NativeCaptureRegressionTests.cs  Snacka.Client.Tests.csproj  VoiceChannelCreationTests.cs
tests/Snacka.Client.UnitTests/: AudioGainProcessorTests.cs  AudioProcessorServiceTests.cs  McapParserTests.cs  WebRtcAudioProcessorTests.cs
tests/Snacka.Server.Tests/: IntegrationTestBase.cs  NullNotificationService.cs
tools/AudioDeviceTest/: AudioDeviceTest.csproj  Program.cs
tools/AudioEnumTest/: Program.cs
tools/VideoEncoderTest/: Program.cs  VideoEncoderTest.csproj
(+322 files in other folders)
